# TOC_Asian_country_regex

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: uni-regex-api.yml
api/routers/: export.py  logo_router.py  search.py  u_detail.py  universities.py
apps/backend/src/: main.py  pyproject.toml
apps/backend/src/api/: __init__.py
apps/backend/src/api/routers/: countries.py  logo_router.py  search.py  u_detail.py  universities.py
apps/backend/src/config/: settings.py
apps/backend/src/models/: __init__.py  countries.py  search.py  universities.py
apps/backend/src/orchestrators/: __init__.py  crawler.py  search.py
apps/backend/src/routers/: logo_router.py
apps/backend/src/services/: logo_crawler.py
apps/backend/src/utils/: http.py  u_detail.py  university.py
models/: search.py  universities.py
orchestrators/: __init__.py  crawler.py  logo_crawler.py  search.py
utils/: country.py  u_detail.py  university.py
