[project]
name = "toc-university-regex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sympy>=1.14.0",
]

